# sta

./: .gitignore  LICENSE  README.md  docker-compose.yml  orientation_data.npz  pyproject.toml  pyvenv.cfg  rename.py  setup.cfg  volume.npy
assets/: crop_explanation.tif  dehom.tif  material_params.json  orientation.tif
images/: crop_explanation.tif
sta/: analysis.py  dehom.py  filepick.py  gui.py  io.py  simulation.py
strong/: __init__.py  analysis.py  dehom.py  gui.py  simulation.py
tests/: analysis_test.py  dehom_test.py  io_test.py  simulation_test.py
