[metadata]
name = strong
version = 0.2.4
description = Structural tensor analysis for fiber orientation computing
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Naruki-Ichihara
author_email = ichihara.naruki@nihon-u.ac.jp
classifiers =
    Development Status :: 1 - Alpha
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
[options]
zip_safe = False
packages = find:
install_requires =
  numpy
  numba
  pandas
  scipy
  scikit-image
  opencv-python
  pyvista
  pydicom
  flet
